--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -9,10 +9,11 @@
   padding: 0 2rem;
 
   &__welcome {
+    padding-left: 15px;
     font-family: var(--font-accent);
-    font-size: 22px;
+    font-size: 20px;
     font-weight: 600;
-    color: var(--page-bg);
+    color: var(--accent);
   }
 }
 
